--- a/src/components/signUp/signup.css
+++ b/src/components/signUp/signup.css
@@ -1,13 +1,26 @@
 .main-login-div{
     width: 100%;
-    margin: 5% auto;
+    
 }
 
 .full-width-container{
     width: 100% !important;
 }
-
-@media only screen and (max-width: 768px) {
+.main_card{
+    width: 80%
+}
+.signmain{
+    width: 40%;
+    margin: 0 auto;
+    margin-top: 50px
+}
+.text{
+    text-align: center;
+    font-size: '36px';
+    font-weight: bold;
+    
+}
+/*@media only screen and (max-width: 768px) {
     .main-login-div{
         width: 80%;
         margin: 5% auto;
@@ -19,4 +32,4 @@
         width: 50%;
         margin: 5% auto;
     }
-}
+}*/
